[package]
name = "akeome2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = { version = "0.10.0", features = ["serde"] }
tokio = { version = "1.42.0", features = ["full"] }
reqwest.version = "0.12.11"
reqwest.default-features = false
reqwest.features = ["http2", "rustls-tls", "charset", "json"]
